Fixed word wrap for display

--- a/lines.css
+++ b/lines.css
@@ -1,3 +1,7 @@
+
 .lines {
-width : 300px;
+     width: 700px; 
+     text-align: left;
+     display: flex;
+     justify-content: left;
 }
